fix(ui): increase sidebar width as contextswitcher and dropdown break on smaller screens

--- a/src/css/tailwind.css
+++ b/src/css/tailwind.css
@@ -48,7 +48,7 @@
 
     --ifm-toc-border-color: var(--docs-color-border);
 
-    --doc-sidebar-width: 280px !important;
+    --doc-sidebar-width: 300px !important;
 
     /* Tailwind theming */
 
